[gd_scene load_steps=3 format=2]

[ext_resource path="res://DinoCrush.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/CardChip.gd" type="Script" id=2]

[node name="CardChip" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 66.0
margin_bottom = 16.0
color = Color( 0.462745, 0.545098, 0.682353, 1 )

[node name="TextBacker" type="ColorRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 62.0
margin_bottom = 12.0
mouse_filter = 2
color = Color( 0.329412, 0.403922, 0.52549, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 62.0
margin_bottom = 16.0
mouse_filter = 2

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 58.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 1 )
text = "Card Title"

[connection signal="mouse_entered" from="Background" to="." method="_on_Background_mouse_entered"]
[connection signal="mouse_exited" from="Background" to="." method="_on_Background_mouse_exited"]
